# costmelt

./: .gitignore  CONTRIBUTING.md  GIT_BASH_SETUP.md  LICENSE  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP.md  SETUP_KEYS_GUIDE.md  START_HERE.md  TESTING_GUIDE.md  docker-compose.yml
.github/: PROFILE_SETUP.md
.github/profile/: README.md
backend/: .env.example  .env.local.example  Dockerfile  config.py  main.py  main_integration_example.py  requirements.txt  requirements_fix.md
backend/api/: auth.py  batch_queue.py  dashboard.py  gateway.py  overkill_detector.py  (+3 more)
benchmarks/: k6_basic.js  k6_cache_vs_no_cache.js  locustfile.py  profiling_runner.py  requirements.txt
dashboard/: .env.local.example  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEPLOYMENT.md  GTM_STRATEGY.md  IMPLEMENTATION_GUIDE.md  LOCAL_TESTING.md  PRD.md  PRODUCT_BLUEPRINT.md  ROADMAP.md  SECURITY.md  TECHNICAL_SPECS.md
landing/: .env.local.example  Dockerfile  jest.setup.js  package-lock.json  package.json  tailwind.config.js
postman/: CostMelt.postman_collection.json
scripts/: bootstrap.ps1  bootstrap.sh  create_admin_key.py  dev.sh  init_system.py  migrate.sh  start.sh  stop.sh  test_everything.ps1  test_everything.sh  test_local.ps1  test_local.sh
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/costmelt/: __init__.py  client.py  errors.py  types.py  utils.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
(+98 files in other folders)
